# ScreenStream

./: .gitignore  AGENTS.md  LICENSE  PrivacyPolicy.md  README.md  README.zh-tw.md  SECURITY.md  TermsConditions.md  build.gradle  build.gradle.kts  debug-key.jks  gradle.properties  settings.gradle  settings.gradle.kts  signing.gradle
app/: build.gradle  build.gradle.kts  fabric.gradle  proguard-rules.pro
app/libs/: bottomsheets-release.aar
common/: build.gradle  build.gradle.kts
data/: build.gradle  build.gradle.kts  proguard-rules.pro
domain/: build.gradle
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mjpeg/: build.gradle  build.gradle.kts
model/: build.gradle
presenter/: build.gradle
rtsp/: build.gradle.kts
screencaptureengine/: build.gradle.kts  consumer-rules.pro  implementation-tracker.md  screen-capture-engine-design-v16.md  screen-capture-engine-design-v21.md  screen-capture-engine-design-v28.md  screen-capture-engine-design-v32.md  screen-capture-engine-design-v33.md  screen-capture-engine-design-v34.md  screen-capture-engine-design-v35.md  screen-capture-engine-design-v37.md
screencaptureengine/design-next/: 01-authority-router.md  02-product-contract.md  03-shared-runtime.md  04-verification.md  05-domain-controller-reconciliation.md  07-domain-target.md  (+7 more)
screencaptureengine/src/main/cpp/: CMakeLists.txt  native_jpeg_runtime.cpp  native_jpeg_runtime.h  screen_capture_engine_jni.cpp  screencaptureengine.map.txt
webrtc/: build.gradle  build.gradle.kts  consumer-rules.pro
webrtc-runtime/: README.md  build.gradle.kts  consumer-rules.pro
(+1607 files in other folders)
